# cffi

./: .gitignore  .hgignore  .hgtags  .readthedocs.yaml  .travis.yml  AUTHORS  MANIFEST.in  README.md  TODO  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_base.py  setup_cpython.py  suppressions_free_threading.txt  tox.ini
.github/actions/dynamatrix/: matrix_yaml_to_json.py
.github/workflows/: build-riscv64.yml  ci.yaml  lint.yml
_cffi1/: __init__.py  _cffi_include.h  bsdopendirtype.py  bsdopendirtype_build.py  cdlopen.c  cffi1_module.c  cffi_opcode.py  cgc.c  cglob.c  ffi_obj.c  lib_obj.c  manual.c  manual2.py  parse_c_type.c  parse_c_type.h  readdir2_build.py  realize_c_type.c  recompiler.py  setuptools_ext.py  support.py  test_dlopen.py  test_ffi_obj.py  test_new_ffi_1.py  test_parse_c_type.py  test_realize_c_type.py  test_recompiler.py  test_unicode_literals.py  test_verify1.py
c/: _cffi_backend.c  _ffi_backend.c  call_python.c  cdlopen.c  cffi1_module.c  cgc.c  cglob.c  check__thread.c  commontypes.c  ffi_obj.c  file_emulator.h  lib_obj.c  malloc_closure.h  minibuffer.h  misc_thread_common.h  misc_thread_posix.h  misc_win32.h  non_gcc_errno.h  parse_c_type.c  realize_c_type.c  test_c.py  wchar_helper.h  wchar_helper_3.h
c/libffi_arm64/: README  build_libffi.bat
c/libffi_arm64/include/: ffi.h
c/libffi_msvc/: README  ffi.c  prep_cif.c
cffi/: __init__.py  _cffi_include.h  _embedding.h  api.py  backend_ctypes.py  cffi_opcode.py  commontypes.py  cparser.py  error.py  ffiplatform.py  lock.py  model.py  parse_c_type.h  pkgconfig.py  recompiler.py  setuptools_ext.py  vengine_cpy.py  vengine_gen.py  verifier.py
demo/: _curses.py  _curses_build.py  _curses_setup.py  api.py  bsdopendirtype.py  bsdopendirtype_build.py  bsdopendirtype_setup.py  btrfs-snap.py  cdef_call_python.py  cffi-cocoa.py  embedding.py  embedding_test.c  extern_python.py  extern_python_varargs.py  fastcsv.py  gmp.py  gmp_build.py  manual2.py  pwuid.py  pwuid_build.py  pyobj.py  readdir.py  readdir2.py  readdir2_setup.py  readdir_ctypes.py  recopendirtype.py  setup.py  winclipboard.py  winclipboard_build.py  xclient.py  xclient_build.py
doc/: design.rst  todo
doc/misc/: design.rst  parse_c_type.rst
doc/source/: buildtool.rst  cdef.rst  cffi-gen-src.rst  conf.py  embedding.rst  goals.rst  index.rst  installation.rst  overview.rst  ref.rst  using.rst  whatsnew.rst
ffi/: __init__.py  api.py  backend_base.py  backend_ctypes.py  cparser.py  ffiplatform.py  model.py  verifier.py
new/: PLAN  _cffi_include.h  cffi1  cffi1_module.c  cffi_opcode.py  cglob.c  ffi_obj.c  lib_obj.c  manual.c  parse_c_type.c  parse_c_type.h  realize_c_type.c  recompiler.py  test_dlopen.py  test_ffi_obj.py  test_parse_c_type.py  test_realize_c_type.py  test_recompiler.py  test_verify1.py
src/: backend_ctypes.py  ffi.py
src/c/: _cffi_backend.c  call_python.c  cdlopen.c  cffi1_module.c  cglob.c  commontypes.c  ffi_obj.c  file_emulator.h  lib_obj.c  malloc_closure.h  minibuffer.h  misc_thread_common.h  misc_thread_posix.h  misc_win32.h  realize_c_type.c  test_c.py
src/c/libffi_arm64/: ffi.lib
src/c/libffi_arm64/include/: ffi.h  fficonfig.h
src/c/libffi_x86_x64/: ffi.h
src/cffi/: __init__.py  _buildtool.py  _cffi_gen_src.py  _cffi_include.h  _embedding.h  _imp_emulation.py  _shimmed_dist_utils.py  api.py  backend_ctypes.py  buildtool.py  cffi_opcode.py  commontypes.py  cparser.py  error.py  ffiplatform.py  model.py  pkgconfig.py  recompiler.py  setuptools_ext.py  vengine_cpy.py  vengine_gen.py  verifier.py
src/cffi/buildtool/: __init__.py  __main__.py  _cli.py  _gen.py
src/test/: test_cdata.py  test_parsing.py
testing/: backend_tests.py  callback_in_thread.py  conftest.py  support.py  test_cdata.py  test_ctypes.py  test_ffi_backend.py  test_function.py  test_integration.py  test_math.py  test_ownlib.py  test_parsing.py  test_platform.py  test_unicode_literals.py  test_verify.py  test_version.py  test_zdistutils.py  test_zintegration.py  udir.py
testing/cffi0/: backend_tests.py  callback_in_thread.py  test_backend.py  test_cdata.py  test_ctypes.py  test_ffi_backend.py  test_function.py  test_function_args.py  test_model.py  test_ownlib.py  test_parsing.py  test_unicode_literals.py  test_verify.py  test_verify2.py  test_version.py  test_vgen.py  test_vgen2.py  test_zdistutils.py  test_zintegration.py
testing/cffi1/: test_buildtool.py  test_buildtool_meson.py  test_cffi_binary.py  test_cffi_gen_src.py  test_cffi_gen_src_meson.py  test_commontypes.py  test_dlopen.py  test_dlopen_unicode_literals.py  test_ffi_obj.py  test_function_args.py  test_new_ffi_1.py  test_parse_c_type.py  test_pkgconfig.py  test_re_python.py  test_realize_c_type.py  test_recompiler.py  test_unicode_literals.py  test_verify1.py  test_zdist.py
testing/cffi1/buildtool_example/: meson.build
testing/cffi1/buildtool_example2/: meson.build
testing/cffi1/buildtool_examples/build_script_example/: meson.build
testing/cffi1/buildtool_examples/cdef_example/: meson.build
testing/cffi1/buildtool_examples/common/: pyproject.toml
testing/cffi1/cffi_gen_src_examples/common/: pyproject.toml
testing/embedding/: __init__.py  add1.py  add2.py  add3.py  add_recursive-test.c  add_recursive.py  empty-test.c  empty.py  initerror.py  perf.py  test_basic.py  test_performance.py  test_recursive.py  test_thread.py  test_tlocal.py  thread-test.h  thread1-test.c  thread2-test.c  thread3-test.c  tlocal-test.c  tlocal.py  withunicode.py
testing/snippets/basic_verify/: setup.py
testing/snippets/package/: setup.py
testing/snippets/setuptools_package/: setup.py
tools/: version.py
wheelhouse/: cffi-1.17.0.dev0-cp313-cp313-manylinux_2_28_x86_64.whl
(+14 files in other folders)
