[build-system]
requires = [
    # first version that supports Python 3.12; older versions may work
    # with previous Python versions, but are not tested
    "setuptools >= 66.1"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts ="""
    -r a
    --verbose
    --strict-markers
    --durations-min 1
    --durations 10
    --color yes
    --showlocals
    -n auto
    --maxprocesses 7
"""
testpaths = [
    "src/c",
    "testing/",
]

