[metadata]
license_file = LICENSE
project_urls =
    Documentation = http://cffi.readthedocs.org/
    Source Code = https://foss.heptapod.net/pypy/cffi
    Issue Tracker = https://foss.heptapod.net/pypy/cffi/issues
    Changelog = https://cffi.readthedocs.io/en/latest/whatsnew.html
    Downloads = https://foss.heptapod.net/pypy/cffi/-/tags
    Contact = https://groups.google.com/forum/#!forum/python-cffi
