[metadata]
license_file = LICENSE
license_files = LICENSE
project_urls =
    Documentation = http://cffi.readthedocs.org/
    Source Code = https://github.com/python-cffi/cffi
    Issue Tracker = https://github.com/python-cffi/cffi/issues
    Changelog = https://cffi.readthedocs.io/en/latest/whatsnew.html
    Downloads = https://github.com/python-cffi/cffi/releases
    Contact = https://groups.google.com/forum/#!forum/python-cffi
